--- a/style.css
+++ b/style.css
@@ -215,7 +215,10 @@ html {
 
 main {
   flex: 1;
-  padding: 15px;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
 }
 
 .button {
