--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@
 
 body {
   margin: 0;
+  /* width: 100%; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -215,7 +216,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  /* margin: 0; */
   margin-bottom: 20px;
 }
 
@@ -323,7 +324,7 @@ main {
 }
 
 .button:active {
-  transform: scale(0.91);
+  transform: scale(0.95);
 }
 
 .about-me {
@@ -340,6 +341,8 @@ main {
 .portfo-articles {
   display: grid;
   gap: 35px;
+  /* padding: 80px; */
+  padding: 40px;
 }
 
 .portfo-articles > article {
